@@ -64,12 +64,12 @@ macro_rules! baud_rate_check {
             println!("  {:?}: FAILED ({})", baud_rate, e);
         }
         match $port.baud_rate() {
-            None => println!("  {:?}: FAILED (error retrieving baud rate)", baud_rate),
-            Some(r) if r != baud_rate => println!("  {:?}: FAILED (baud rate {:?} does not match set baud rate {:?})",
+            Err(_) => println!("  {:?}: FAILED (error retrieving baud rate)", baud_rate),
+            Ok(r) if r != baud_rate => println!("  {:?}: FAILED (baud rate {:?} does not match set baud rate {:?})",
                 baud_rate,
                 r,
                 baud_rate),
-            Some(_) => println!("  {:?}: success", baud_rate),
+            Ok(_) => println!("  {:?}: success", baud_rate),
         }
     };
 }
@@ -81,12 +81,12 @@ macro_rules! data_bits_check {
             println!("  {:?}: FAILED ({})", data_bits, e);
         } else {
             match $port.data_bits() {
-                None => println!("FAILED to retrieve data bits"),
-                Some(r) if r != data_bits => println!("  {:?}: FAILED (data bits {:?} does not match set data bits {:?})",
+                Err(_) => println!("FAILED to retrieve data bits"),
+                Ok(r) if r != data_bits => println!("  {:?}: FAILED (data bits {:?} does not match set data bits {:?})",
                     data_bits,
                     r,
                     data_bits),
-                Some(_) => println!("  {:?}: success", data_bits),
+                Ok(_) => println!("  {:?}: success", data_bits),
             }
         }
     };
@@ -99,12 +99,12 @@ macro_rules! flow_control_check {
             println!("  {:?}: FAILED ({})", flow_control, e);
         } else {
             match $port.flow_control() {
-                None => println!("FAILED to retrieve flow control"),
-                Some(r) if r != flow_control => println!("  {:?}: FAILED (flow control {:?} does not match set flow control {:?})",
+                Err(_) => println!("FAILED to retrieve flow control"),
+                Ok(r) if r != flow_control => println!("  {:?}: FAILED (flow control {:?} does not match set flow control {:?})",
                     flow_control,
                     r,
                     flow_control),
-                Some(_) => println!("  {:?}: success", flow_control),
+                Ok(_) => println!("  {:?}: success", flow_control),
             }
         }
     };
@@ -117,12 +117,12 @@ macro_rules! parity_check {
             println!("  {:?}: FAILED ({})", parity, e);
         } else {
             match $port.parity() {
-                None => println!("FAILED to retrieve parity"),
-                Some(r) if r != parity => println!("  {:?}: FAILED (parity {:?} does not match set parity {:?})",
+                Err(_) => println!("FAILED to retrieve parity"),
+                Ok(r) if r != parity => println!("  {:?}: FAILED (parity {:?} does not match set parity {:?})",
                     parity,
                     r,
                     parity),
-                Some(_) => println!("  {:?}: success", parity),
+                Ok(_) => println!("  {:?}: success", parity),
             }
         }
     };
@@ -135,11 +135,11 @@ macro_rules! stop_bits_check {
             println!("  {:?}: FAILED ({})", stop_bits, e);
         } else {
             match $port.stop_bits() {
-                None => println!("FAILED to retrieve stop bits"),
-                Some(r) if r != stop_bits => println!("FAILED, stop bits {:?} does not match set stop bits {:?}",
+                Err(_) => println!("FAILED to retrieve stop bits"),
+                Ok(r) if r != stop_bits => println!("FAILED, stop bits {:?} does not match set stop bits {:?}",
                     r,
                     stop_bits),
-                Some(_) => println!("  {:?}: success", stop_bits),
+                Ok(_) => println!("  {:?}: success", stop_bits),
             }
         }
     };
